fixed more formatting issues on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -124,9 +124,6 @@ select {
   color: var(--form-text);
   background-color: var(--background);
 
-  font-family: inherit;
-  font-size: inherit;
-
   margin-right: 6px;
   margin-bottom: 6px;
   padding: 10px;
